syntax = "proto3";

package freighter;

option go_package = "github.com/johnewart/freighter/freighter";

service Freighter {
  rpc GetDir(DirRequest) returns (DirReply) {}
  rpc GetFile(FileRequest) returns (FileReply) {}
  rpc GetTree(TreeRequest) returns (TreeReply) {}
}

message TreeRequest {
  string repository = 1;
  string target = 2;
}

message TreeReply {
  repeated FileInfo files = 1;
}

message DirRequest {
  string repository = 1;
  string target = 2;
  string path = 3;
}

message DirReply {
  repeated FileInfo files = 1;
}

enum FileType {
  FILE = 0;
  DIR = 1;
  SYMLINK = 2;
  OTHER = 3;
}

message FileInfo {
  string name = 1;
  string path = 2;
  bool isDir = 3;
  uint64 size = 4;
  uint64 modTime = 5;
  uint32 mode = 6;
  uint64 accessTime = 7;
  uint64 changeTime = 8;
  FileType type = 9;
  string extraData = 10;
}

message FileRequest {
  string repository = 1;
  string target = 2;
  string path = 3;
}

message FileReply {
  bytes data = 1;
}
